@@ -8,6 +8,11 @@ log_inter: 1
 // Inter Log Filename
 inter_log_filename: log/inter.log
 
+// Guild earned exp modifier.
+// Adjusts taxed exp before adding it to the guild's exp. For example, if set 
+// to 200, the guild receives double the player's taxed exp.
+guild_exp_rate: 100
+
 // Level range for sharing within a party
 party_share_level: 10
 
